--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<app-header></app-header>
+<div style="background-color: #eee; max-height: 100%;">
+  <app-header></app-header>
+
+  <div class="container" style="margin-top: 100px">
+    <div class="row">
+      <div class="col-md-12">
+        <app-home></app-home>
+      </div>
+    </div>
+  </div>
+</div>
