--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
     <div
       class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2"
     >
-      <ul class="navbar-nav mr-auto" style="margin-left: 25%;">
-        <li class="nav-item active" >
+      <ul class="navbar-nav mr-auto" >
+        <li class="nav-item active" routerLinkActive="active">
           <label style="color: white; padding: 5px;">Utec</label>
         </li>
         <li class="nav-item active" >
@@ -90,4 +90,3 @@
     </div>
   </div>
 </nav>
-
