--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,6 @@
 nav{
 
-position: absolute;
+/* position: absolute; */
 width: 100%;
 height: 63px;
 left: 0px;
@@ -43,7 +43,4 @@ svg{
 width: 35px;
 height: 20px;
 color: white;
-}
-ul{
-  margin-left: 50%;
 }
