--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
+<app-header></app-header>
 
-<div style="background-color: #eee;">
-
+<div class="container">
   <ul class="breadcrumb">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Solutions</a></li>
-    <li><a href="#">Vaastu Check</a></li>
+    <li><a [routerLink]="'home'">Home</a></li>
+    <li><a [routerLink]="'home'">Solutions</a></li>
+    <li><a [routerLink]="'vastuScore'">Vaastu Check</a></li>
     <li>Vaastu Score Check</li>
   </ul>
 
@@ -19,8 +19,8 @@
               />
             </div>
             <div class="col-sm-8">
-              <h5 class="card-title">Compass Tool</h5>
-              <p class="card-text" style="color: #666666">Output Time :1 min</p>
+              <h5 class="vaastu-title text-body mb-0">Compass Tool</h5>
+              <small class="mb-2" style="color: #999999;">Output Time :1 min</small>
               <p class="card-text">
                 Point in the direction of specific rooms to know their suitability
                 according to Vaastu guidelines.
@@ -41,7 +41,8 @@
             </div>
             <div class="col-sm-8">
               <h5 class="vaastu-title text-body mb-0">Vaastu Score Check</h5>
-              <small class="mb-2">Ideal for planning stage</small>
+              <small class="mb-2" style="color: #999999;
+              ">Ideal for planning stage</small>
               <p class="mb-0">
                 Get an instant Vaastu score by entering the locations of all the
                 rooms in your house.
@@ -53,4 +54,6 @@
     </div>
   </div>
 
+
 </div>
+
