--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,13 @@
+
+
 <nav class="navbar navbar-expand-lg">
+  <div class="container text-centered" >
 
-  <div class="container-fluid">
-
-
-    <div
-      class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2"
-    >
-      <ul class="navbar-nav mr-auto" >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item active" routerLinkActive="active">
           <label style="color: white; padding: 5px;">Utec</label>
         </li>
@@ -17,7 +18,7 @@
           <a class="nav-link active" href="#">Learn</a>
         </li>
         <li class="nav-item active" >
-          <a class="nav-link active" [routerLink]="['/home']" routerLinkActive="router-link-active" >Solutions</a>
+          <a class="nav-link active" aria-current="page"  [routerLink]="['/home']" routerLinkActive="router-link-active" >Solutions</a>
         </li>
 
         <li class="nav-item dropdown active">
@@ -41,8 +42,8 @@
       </ul>
     </div>
 
-    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-      <ul class="navbar-nav ml-auto">
+    <div class="navbar-collapse collapse col-auto">
+      <ul class="navbar-nav ">
         <li class="nav-item">
           <a class="nav-link" href="#">Support</a>
         </li>
