--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,6 @@
 <div class="container">
-  <ul class="breadcrumb">
-    <li><a [routerLink]="'/home'">Home</a></li>
-    <!-- <li><a [routerLink]="'/home'">Solutions</a></li>
-    <li><a [routerLink]="'/vastuScore'">Vaastu Check</a></li> -->
 
-  </ul>
-
+  <app-breadcrumb></app-breadcrumb>
   <div class="row">
     <div class="col-sm-6">
       <div class="card">
