add and remove from list work done

--- a/src/app/vastu-score-check/vastu-score-check.component.html
+++ b/src/app/vastu-score-check/vastu-score-check.component.html
@@ -99,7 +99,7 @@
               <ul class="list-unstyled mb-0"></ul>
               <div *ngIf="isCheckBoxClicked == true && isboxClicked==true;" >
                 <p *ngFor="let i of boxData">
-                  {{ i }}
+                  {{ i.DirectionNameList }}
                 </p>
               </div>
 
