api call for vastiscore check

--- a/src/app/common_layout/footer/footer.component.html
+++ b/src/app/common_layout/footer/footer.component.html
@@ -1,1 +1,89 @@
-<p>footer works!</p>
+<footer class="bg-color_light clrboth" id="footerScrollSection">
+
+<div class="footer-component container">
+  <div class="row">
+     <div class="col-1 pr-0 footerScrollSection" style="padding-right: 0px;">
+
+           <a class="active" href="#"> About Us</a>
+
+           <a class="active" href="/en/home/Support.html"> Support</a>
+
+           <a class="active" href="#"> Privacy Policy</a>
+
+           <a class="active" href="#"> Terms of Use</a>
+
+     </div>
+     <div class="col-1 footer-grid">
+        <p class="footer-headings text-uppercase mb-0 pb-0"><a href="#" class="learn_text">Learn</a></p>
+
+           <a class="active" href="#"> Articles</a>
+
+           <a class="active" href="#"> Videos</a>
+
+     </div>
+     <div class="col-3 footer-grid footergrid">
+        <p class="footer-headings text-uppercase mb-0 solution-style"><a [routerLink]="'/home'">Solutions</a></p>
+        <div class="row">
+           <div class="col-6 resize-column">
+
+              <a class="active" href="#"> Plans</a>
+
+              <a class="active" href="#"> Styles</a>
+
+              <a class="active" href="#"> Finance</a>
+           </div>
+           <div class="col-6 pl-0 expMatPer">
+
+                 <a class="active" href="#"> Experts</a>
+
+                 <a class="active" href="#"> Materials</a>
+
+                 <a class="active" href="#"> Permission</a>
+
+           </div>
+        </div>
+     </div>
+     <div class="col-3 footer-grid">
+        <p class="footer-headings text-uppercase mb-0">CONNECT WITH US</p>
+        <div class="social-links flex-row d-flex">
+
+              <a href="https://www.youtube.com"> <img src="../../../assets/images/fill-1.svg" class="footer_image" alt="Social Media Icon"></a>
+
+              <a href="https://www.facebook.com"> <img src="../../../assets/images/Path.png" class="footer_image" alt="Social Media Icon"></a>
+
+              <a href="https://www.instagram.com"> <img src="../../../assets/images/034-instagram.svg" class="footer_image" alt="Social Media Icon"></a>
+
+              <a href="https://www.linkedin.com"> <img src="../../../assets/images/031-linkedin.svg" class="footer_image" alt="Social Media Icon"></a>
+
+        </div>
+        <p class="footer-headings text-uppercase mb-0 customer-care-text">CUSTOMER CARE NUMBER</p>
+        <a href="#" id="anchorClick" data-rel="external" class="customer-care-number">1800 266 8823</a>
+     </div>
+     <div class="col-4 footer-grid">
+        <div class="row">
+
+              <div class="col-md-6">
+                 <div class="d-flex align-items-end">
+                    <img src="../../../assets/images/logo-1.svg" class="utec-icon mr-2 mb-2" alt="App Store Link">
+                    <p class="footer-headings text-uppercase mb-0">UTEC APP</p>
+                 </div>
+                 <a href="#"><img src="../../../assets/images/Capture.png" class="googleplay-icon" alt="Google Play Store Logo"></a>
+              </div>
+
+              <div class="col-md-6">
+                 <div class="d-flex align-items-end">
+                    <img src="../../../assets/images/logo-1.svg" class="utec-icon mr-2 mb-2" alt="App Store Link">
+                    <p class="footer-headings text-uppercase mb-0">UTEC PARTNER</p>
+                 </div>
+                 <a href="#"><img src="../../../assets/images/Capture.png" class="googleplay-icon" alt="Google Play Store Logo"></a>
+              </div>
+
+        </div>
+     </div>
+  </div>
+  <div class="copywrite d-flex pt-2 footer-icon">
+     <img src="../../../assets/images/logo-1.svg" class="utec-icon mr-2 footer-icon" alt="Utec Footer Logo">
+     <p class="copywrite-text m-0">Ⓒ 2020 All Rights Reserved, UltraTech Cement Ltd</p>
+  </div>
+</div>
+</footer>
