--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
 <app-header></app-header>
   <div class="row">
       <div class="col-md-12">
+
        <router-outlet></router-outlet>
       </div>
     </div>
 
-
+<app-footer></app-footer>
