--- a/src/app/vastu-score-check/vastu-score-check.component.css
+++ b/src/app/vastu-score-check/vastu-score-check.component.css
@@ -119,7 +119,7 @@ input[type=checkbox]:after {
   font-weight: 700;
   min-width: 250px;
   display: block;
-  margin: 0 auto;
+  margin: 0 15px;
   text-transform: uppercase;
 }
 .calculateBtnWrap {
@@ -163,4 +163,27 @@ rgba(80, 55, 150, 1);
 }
 .roomTypeList li span {
   color: #666666;
+}
+.active .box {
+  background: #FDEEE6;
+  box-shadow: 0px 0px 4px rgba(255, 112, 33, 0.3);
+
+  border-radius: 8px;
+  text-align: center;
+  margin-bottom: 30px;
+  padding: 20px;
+  min-height: 180px;
+  cursor: pointer;
+
+}
+.active h3{
+  color: rgba(255, 112, 33, 1) !important;
+}
+.active h3{
+  color: rgba(153, 153, 153, 1) ;
+}
+h3{
+  text-align: center;
+letter-spacing: 1.16px;
+text-transform: uppercase;
 }
