--- a/src/app/common_layout/breadcrumb/breadcrumb.component.html
+++ b/src/app/common_layout/breadcrumb/breadcrumb.component.html
@@ -1,4 +1,6 @@
 <ul class="breadcrumb">
-  <li><a [routerLink]="'/home'">Home</a></li>
-  <li><a [routerLink]="'/vastuScore'">Vaastu Check</a></li>
+  <li><a [routerLink]="'/'">Home</a></li>
+  <li><a [routerLink]="'/vastuCheck'">Vaastu Check</a></li>
+  <li><a [routerLink]="'/vastuScore'">Vaastu score</a></li>
+
 </ul>
