--- a/src/app/vastu-score-check/vastu-score-tool/vastu-score-tool.component.html
+++ b/src/app/vastu-score-check/vastu-score-tool/vastu-score-tool.component.html
@@ -1,11 +1,10 @@
-<app-breadcrumb style="justify-content: flex-start;
-"></app-breadcrumb>
+
 <div class="d-flex " style="justify-content: flex-end;
 margin-right: 80px;">
 
   <a href="#" class="knowMore text-uppercase "
     ><img class="knowMoreImg"
-    src="../../../assets/images/know-more-icon.png"
+    src="../../../assets/images/know-more-icon (1).png"
       alt="Know_more"
     />
     Know More </a
@@ -22,15 +21,15 @@ margin-right: 80px;">
         href="#"
         class="backIcon mb-3 d-none d-lg-inline-block d-md-inline-block"
         ><img
-          src="../../../assets/images/Path.png"
+          src="../../../assets/images/back_arrow-orange.png"
           alt="back_icon"
         />
         <span  class="d-inline-block ml-2">GO BACK</span></a
       >
       <h3 class="hd-overall-vaastu-score">OVERALL VAASTU SCORE</h3>
       <div class="improvment-req-number">
-        <div class="number">8.7 / 10</div>
-        <div class="tx-improvement-required">Excellent</div>
+        <div class="number"> {{overallVastuScore}} </div>
+        <div class="tx-improvement-required">{{vastuScoreStatus}}</div>
       </div>
       <div class="room-wise-breakup-score">
         <h3 class="hd-overall-vaastu-score">ROOM-WISE BREAKUP OF SCORE</h3>
@@ -38,42 +37,20 @@ margin-right: 80px;">
       </div>
       <div class="selectedRoomBox position-relative">
         <div class="row no-gutters">
-          <div class="col-md-6 col-12 border-bottom">
+          <div class="col-md-6 col-12 border-bottom" *ngFor="let item of roomWiseVastuScore">
             <div class="d-flex justify-content-between py-3">
               <div class="left">
-                Washroom + Toilet
-                <div class="inner-left">(West)</div>
+                {{item.room}}
+                <div class="inner-left">({{item.direction}})</div>
               </div>
               <div class="right mr-lg-3 mr-md-3 mr-0">
-                <button class="btn-fav btn">Favorable</button>
+                <button class="btn-fav btn" (click)="getRoomDetails(item)"[ngClass]="{'yellow': item.legend=='Neutral'}">{{item.legend}}</button>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-12 border-bottom">
-            <div class="d-flex justify-content-between py-3">
-              <div class="left ml-lg-3 ml-md-3 ml-0">
-                Dining Room
-                <div class="inner-left">(West)</div>
-              </div>
-              <div class="right">
-                <button class="btn-fav btn">Favorable</button>
-              </div>
-            </div>
-          </div>
+
         </div>
-        <div class="row no-gutters">
-          <div class="col-md-6 col-12 border-bottom">
-            <div class="d-flex justify-content-between py-3">
-              <div class="left">
-                Kitchen
-                <div class="inner-left">(West)</div>
-              </div>
-              <div class="right mr-lg-3 mr-md-3 mr-0">
-                <button class="btn-fav btn">Favorable</button>
-              </div>
-            </div>
-          </div>
-        </div>
+
       </div>
     </div>
     <button class="btn-reset-vaastu-score">Check score for second plan</button>
